--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1> Number of Visitors</h1>
+<a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=8241962&style=0011&nbdigits=8&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>      
     <div class="container">
         <div class="inputs-wrapper">
             <input type="date" id="date-input">
