--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1> Number of requests</h1>
-<a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=8242201&style=0011&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+
     <div class="container">
         <div class="inputs-wrapper">
             <input type="date" id="date-input">
@@ -45,7 +43,8 @@
         </div>
     </div>
     <script src="script.js"></script>
-<p><span id="datetime"></span></p>
+    <button onclick='incrementVal(event)'>1</button>
+    <p><span id="datetime"></span></p>
 
 <script>
 var dt = new Date();
