--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="inputs-wrapper">
             <input type="date" id="date-input">
-            <button onclick="ageCalculate()">Calculate</button>
+            <button onclick="incrementVal(event)">Calculation 1</button>
         </div>
         <div class="outputs-wrapper">
             <div>
@@ -43,8 +43,7 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <button onclick='incrementVal(event)'>1</button>
-    <p><span id="datetime"></span></p>
+<p><span id="datetime"></span></p>
 
 <script>
 var dt = new Date();
