--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="inputs-wrapper">
             <input type="date" id="date-input">
-            <button onclick="incrementVal(event)">Calculation 0</button>
+            <button onclick='incrementVal(event)'>Calculation 0</button>
         </div>
         <div class="outputs-wrapper">
             <div>
