--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="container">
         <div class="inputs-wrapper">
             <input type="date" id="date-input">
-            <button onclick='incrementVal(event)'>Calculation 0</button>
+            <button onclick="ageCalculate()">Calculate</button>
+            
         </div>
         <div class="outputs-wrapper">
             <div>
