--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <!--Stylesheet-->
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript">
+        var click=0;
+        function ClickCounter(){
+            click=click + 1;
+            document.getElemenById('count').innerHTML=click;
+        }
+    </script>
 </head>
 <body>
 
@@ -44,6 +51,7 @@
         </div>
     </div>
     <script src="script.js"></script>
+<div onclick="ClickCounter()"><span id= "count"></span></div>
 <p><span id="datetime"></span></p>
 
 <script>
