--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <!--Stylesheet-->
     <link rel="stylesheet" href="style.css">
+    <script>
+        <script type="text/javascript"/>
+          var count = 0;
+          var btn = document.getElementById("btn");
+          var disp = document.getElementById("display");
+            
+          btn.onclick = function () {
+              count++;
+              disp.innerHTML = count;
+          }
+    </script>
 
 </head>
 <body>
