--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-
+    <a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=8242822&style=0012&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>   
     <div class="container">
         <div class="inputs-wrapper">
             <input type="date" id="date-input">
             <button onclick="ageCalculate()">Calculate</button>
-            
+
         
         </div>
         <div class="outputs-wrapper">
